--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
 name = "drum-can-delivery-hyper"
 compatibility_date = "2025-02-19"
 
-# Next.js on Cloudflare Pages (Workers runtime)
-pages_build_output_dir = ".vercel/output"
+# Next.js on Cloudflare Pages (next-on-pages)
+# Cloudflare 公式: Build directory = .vercel/output/static
+pages_build_output_dir = ".vercel/output/static"
 
