--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "cf:build": "npx @cloudflare/next-on-pages@latest"
+    "cf:build": "next build && npx @cloudflare/next-on-pages@latest"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
