--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,3 +5,11 @@ compatibility_date = "2025-02-19"
 # Cloudflare 公式: Build directory = .vercel/output/static
 pages_build_output_dir = ".vercel/output/static"
 
+# Node.js compatibility for API routes
+[compatibility_flags]
+nodejs_compat = true
+
+# Use npm instead of pnpm
+[build]
+command = "npm run build"
+
