--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
-    "build": "next build",
+    "build": "next build && npx @cloudflare/next-on-pages@latest",
     "start": "next start",
     "lint": "next lint",
     "cf:build": "next build && npx @cloudflare/next-on-pages@latest"
